[gd_scene load_steps=24 format=3 uid="uid://cpgsto1qo8kix"]

[ext_resource type="Texture2D" uid="uid://cpxpt0f5e04ws" path="res://Small-8-Direction-Characters_by_AxulArt.png" id="1_bxlij"]
[ext_resource type="Script" path="res://playerOne.gd" id="1_m3x6r"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cqt16"]
size = Vector2(13, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_ys07i"]
atlas = ExtResource("1_bxlij")
region = Rect2(64, 240, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjj73"]
atlas = ExtResource("1_bxlij")
region = Rect2(64, 240, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2oq7"]
atlas = ExtResource("1_bxlij")
region = Rect2(64, 264, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_86ga3"]
atlas = ExtResource("1_bxlij")
region = Rect2(64, 216, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_htf1e"]
atlas = ExtResource("1_bxlij")
region = Rect2(32, 240, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_vqt8q"]
atlas = ExtResource("1_bxlij")
region = Rect2(32, 216, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_iarsh"]
atlas = ExtResource("1_bxlij")
region = Rect2(32, 264, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_hnxb7"]
atlas = ExtResource("1_bxlij")
region = Rect2(48, 240, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_f2lgs"]
atlas = ExtResource("1_bxlij")
region = Rect2(48, 216, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_kaucb"]
atlas = ExtResource("1_bxlij")
region = Rect2(48, 264, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_tbspy"]
atlas = ExtResource("1_bxlij")
region = Rect2(16, 240, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_yq2n8"]
atlas = ExtResource("1_bxlij")
region = Rect2(16, 264, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_rj7if"]
atlas = ExtResource("1_bxlij")
region = Rect2(16, 216, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_hgfpp"]
atlas = ExtResource("1_bxlij")
region = Rect2(0, 240, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_0spli"]
atlas = ExtResource("1_bxlij")
region = Rect2(0, 216, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_tigmr"]
atlas = ExtResource("1_bxlij")
region = Rect2(0, 240, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_mbbrf"]
atlas = ExtResource("1_bxlij")
region = Rect2(0, 264, 16, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_nib8i"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ys07i")
}],
"loop": true,
"name": &"stay",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjj73")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2oq7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjj73")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_86ga3")
}],
"loop": true,
"name": &"walkBot",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_htf1e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vqt8q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_htf1e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iarsh")
}],
"loop": true,
"name": &"walkRight",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hnxb7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f2lgs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hnxb7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kaucb")
}],
"loop": true,
"name": &"walkRightBottom",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tbspy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yq2n8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tbspy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rj7if")
}],
"loop": true,
"name": &"walkRightTop",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hgfpp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0spli")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tigmr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mbbrf")
}],
"loop": true,
"name": &"walkTop",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_rkrkw"]
radius = 12.0416

[sub_resource type="CanvasTexture" id="CanvasTexture_vlv5m"]

[node name="Player" type="CharacterBody2D"]
position = Vector2(-1, -2)
collision_mask = 7
script = ExtResource("1_m3x6r")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 1.5)
shape = SubResource("RectangleShape2D_cqt16")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, 0)
sprite_frames = SubResource("SpriteFrames_nib8i")
animation = &"stay"

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3, 3)

[node name="Marker2D" type="Marker2D" parent="."]

[node name="Area2D" type="Area2D" parent="Marker2D"]
modulate = Color(0.872828, 0.381378, 0.357624, 1)
collision_mask = 4

[node name="actionShape2D" type="CollisionShape2D" parent="Marker2D/Area2D"]
position = Vector2(1, 2)
shape = SubResource("CircleShape2D_rkrkw")
debug_color = Color(0.87348, 0.308177, 0.41928, 0.42)

[node name="DialogBox" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = -191.0
offset_top = 68.0
offset_right = 191.0
offset_bottom = 108.0

[node name="NinePatchRect" type="NinePatchRect" parent="DialogBox"]
layout_mode = 1
anchors_preset = -1
anchor_top = -1.612
anchor_right = 1.005
anchor_bottom = 1.0
offset_left = -2.0
offset_top = 25.48
offset_right = -1.91
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("CanvasTexture_vlv5m")

[node name="Titre" type="RichTextLabel" parent="DialogBox/NinePatchRect"]
modulate = Color(0.051971, 0.051971, 0.051971, 1)
self_modulate = Color(0.0383972, 0.0383972, 0.0383972, 1)
layout_mode = 0
offset_left = 1.0
offset_right = 224.0
offset_bottom = 23.0
scale = Vector2(0.5, 0.5)
text = "NAME"

[node name="Text" type="RichTextLabel" parent="DialogBox/NinePatchRect"]
layout_mode = 0
offset_left = 1.0
offset_top = 14.0
offset_right = 677.0
offset_bottom = 72.0
scale = Vector2(0.5, 0.5)
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 8
text = "Salut fhjszqkfhsdjkf fhjsqkfhqkjfdshfjkfhk fsdhqjfkshdqk uijokdfujsqkl fsdj fdshjkfsdhjk "

[node name="TextEdit" type="TextEdit" parent="DialogBox/NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 44.0
offset_right = 295.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)

[node name="Button" type="Button" parent="DialogBox/NinePatchRect"]
layout_mode = 0
offset_left = 341.0
offset_top = 16.0
offset_right = 425.0
offset_bottom = 138.0
scale = Vector2(0.5, 0.5)
text = "RÃ©pondre"

[node name="ProgressBar" type="ProgressBar" parent="DialogBox/NinePatchRect"]
layout_mode = 0
offset_left = 363.0
offset_top = 1.0
offset_right = 463.0
offset_bottom = 28.0
scale = Vector2(0.2, 0.2)

[node name="RichTextLabel" type="RichTextLabel" parent="DialogBox/NinePatchRect"]
modulate = Color(0.0295066, 0.0295066, 0.0295066, 1)
layout_mode = 0
offset_left = 343.0
offset_top = 1.0
offset_right = 433.0
offset_bottom = 26.0
scale = Vector2(0.2, 0.2)
text = "Sympathie"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="body_entered" from="Marker2D/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_shape_entered" from="Marker2D/Area2D" to="." method="_on_area_2d_body_shape_entered"]
[connection signal="pressed" from="DialogBox/NinePatchRect/Button" to="." method="_on_button_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
